; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ec_check.c_EC_GROUP_check_named_curve.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ec_check.c_EC_GROUP_check_named_curve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_undef = common dso_local global i32 0, align 4
@EC_F_EC_GROUP_CHECK_NAMED_CURVE = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EC_GROUP_check_named_curve(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @NID_undef, align 4
  store i32 %9, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = call i32* (...) @BN_CTX_new()
  store i32* %13, i32** %8, align 8
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i32, i32* @EC_F_EC_GROUP_CHECK_NAMED_CURVE, align 4
  %18 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %19 = call i32 @ECerr(i32 %17, i32 %18)
  br label %37

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20, %3
  %22 = load i32*, i32** %4, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @ec_curve_nid_from_params(i32* %22, i32* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp sgt i32 %25, 0
  br i1 %26, label %27, label %36

27:                                               ; preds = %21
  %28 = load i32, i32* %5, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %27
  %31 = load i32, i32* %7, align 4
  %32 = call i32* @EC_curve_nid2nist(i32 %31)
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i32, i32* @NID_undef, align 4
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %34, %30, %27, %21
  br label %37

37:                                               ; preds = %36, %16
  %38 = load i32*, i32** %6, align 8
  %39 = call i32 @BN_CTX_free(i32* %38)
  %40 = load i32, i32* %7, align 4
  ret i32 %40
}

declare dso_local i32* @BN_CTX_new(...) #1

declare dso_local i32 @ECerr(i32, i32) #1

declare dso_local i32 @ec_curve_nid_from_params(i32*, i32*) #1

declare dso_local i32* @EC_curve_nid2nist(i32) #1

declare dso_local i32 @BN_CTX_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
